[desk-tool] Implement desk tool actions on top of new actions/operations infra
Co-authored-by: Per-Kristian Nordnes <per.kristian.nordnes@gmail.com>

--- a/packages/@sanity/desk-tool/src/components/DocumentStatusBar/DocumentStatusBar.css
+++ b/packages/@sanity/desk-tool/src/components/DocumentStatusBar/DocumentStatusBar.css
@@ -1,15 +1,5 @@
 @import 'part:@sanity/base/theme/variables-style';
 
-@keyframes DocumentStatusBar__spin {
-  0% {
-    transform: rotate(360deg);
-  }
-
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
 .root {
   background: var(--component-bg);
   display: grid;
@@ -18,25 +8,10 @@
   padding: 0.75em var(--medium-padding);
 }
 
-.isSyncing {
-  composes: root;
-}
-
-.isDisconnected {
-  composes: root;
-}
-
 .status {
   padding: 2px 0;
   display: flex;
   flex-direction: column;
-}
-
-.statusBadges {
-  white-space: nowrap;
-  font-size: calc(11 / 16 * 1em);
-  line-height: 1;
-  margin-bottom: auto;
 }
 
 .statusDetails {
@@ -46,12 +21,8 @@
   white-space: nowrap;
 }
 
-.historyLabel {
+.lastUpdatedButton {
   color: var(--text-muted);
-}
-
-.historyButton {
-  composes: historyLabel;
   vertical-align: top;
   -webkit-appearance: none;
   -webkit-font-smoothing: inherit;
@@ -69,37 +40,6 @@
     @nest &:hover {
       text-decoration: underline;
     }
-  }
-}
-
-.statusIcon {
-  display: inline-block;
-  vertical-align: top;
-  padding: 2px 0 1px;
-  color: var(--text-muted);
-
-  @nest & svg {
-    display: block;
-    transform-origin: center center;
-  }
-
-  @nest .isSyncing & {
-    color: var(--state-success-color);
-  }
-
-  @nest .isDisconnected & {
-    color: var(--state-danger-color);
-  }
-}
-
-.rotatingStatusIcon {
-  composes: statusIcon;
-
-  @nest & svg {
-    animation-name: DocumentStatusBar__spin;
-    animation-duration: 1.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
   }
 }
 
